--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-server",
+  "name": "telegram-ai-bot",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -7,6 +7,6 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "latest"
+    "express": "^4.18.2"
   }
 }
